<resources>
    <string name="app_name">smart panel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="smart_panel">SMART PANEL</string>
<!--    <string name="long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>-->
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="registered"> Register</string>
    <string name="registered2">Dont have an account?</string>
    <string name="email">Email/Username</string>
    <string name="have_account">Already have an account?</string>
    <string name="title">Smart Panel IoT Device</string>
    <string name="room1">Room 1</string>
    <string name="room2">Room 2</string>
    <string name="lamp">Lamp</string>
    <string name="temperature">Temperature</string>
    <string name="suhu">20°C</string>
</resources>