<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".login">


        <ImageView
            android:id="@+id/img_1"
            android:layout_width="583dp"
            android:layout_height="583dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-16dp"
            android:src="@drawable/gambar2" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppinsextra"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="253dp"
            android:layout_height="274dp"
            android:layout_below="@id/txt1"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/img_2"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/username"
                android:paddingStart="10dp"
                android:textColorHint="@color/tint"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:textColorHint="@color/tint"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    <Button
        android:id="@+id/login2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:layout_marginTop="20dp"
        android:width="15dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinssemibold"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/login2"
            android:gravity="center"
            android:layout_margin="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered2"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/registered"
                android:textColor="@color/red"
                android:textSize="15sp" />

        </LinearLayout>



</RelativeLayout>